Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver04.out
FailOver04.java:11:10: compiler.err.cant.resolve.location: kindname.class, Unknown, , , (compiler.misc.location: kindname.class, Test, null)
1 error
