Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/failover/FailOver04.java
/*
 * @test /nodynamiccopyright/
 * @bug 6970584
 * @summary Flow.java should be more error-friendly
 * @author mcimadamore
 *
 * @compile/fail/ref=FailOver04.out -XDrawDiagnostics --should-stop=at=FLOW -XDdev FailOver04.java
 */

class Test {
   { new Unknown() {}; }
}
